--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^1.8.10",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -19,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.5"
   }
 }
